changed components module and table to files
