# component_management_system/metadatas/models.py
@@ -32,7 +32,7 @@ class Metadata(Base):
 
     license_id = Column(GUID(), ForeignKey("spdx_licenses.id"), nullable=True)
 
-    components: Relationship = relationship("Component", backref="metadata", cascade="all, delete, delete-orphan") # type: ignore
+    files: Relationship = relationship("File", backref="metadata", cascade="all, delete, delete-orphan") # type: ignore
     tags: Relationship = relationship("Tag", secondary=metadata_tag, backref="metadatas") # type: ignore
 
 
